--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 {% if name %}
 <img class="uploaded-image"
      style="max-width: 50%; max-length: 50%; margin-top: 2px; margin-bottom: 2px; margin-left: 25%;"
-     src="static/upload/images/{{name}}">
+     src="static/images/upload/{{name}}">
 <div style="padding-bottom: 8rem;">
 {% for color in colors %}
 <div style="width: 100px; margin-top: 2px; margin-bottom:0; margin-left:45%;">
