--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
     <h1 style="margin-left:42%;">Color Palette</h1>
     {% for color in colors %}
     <div style="width: 100px; margin-top: 2px; margin-bottom:0; margin-left:45%;">
-        {{ color }}:
+        <span><strong>{{ color }}:</strong></span>
     </div>
     <div style="background-color:{{ color }}; height: 30px; width: 100px; margin-bottom:0; margin-left:45%;">
     </div>
