--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!------ Include the above in your HEAD tag ---------->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <script src="static/assets/js/main.js"></script>
 </head>
 <body style="background-color: #faffed;">
 <div class="panel panel-default">
@@ -29,23 +31,32 @@
 
 {% if name %}
 <h1 style="margin-left:43%;">Your Image</h1>
-<img class="uploaded-image"
-     style="max-width: 50%; max-length: 50%; margin: 2px 0 20px 25%"
-     src="static/images/upload/{{name}}">
-<div style="border-top: 1px solid #ddd; box-shadow: 0 4px 20px 0 rgb(0 0 0/14%),0 7px 12px -5px rgb(144 164 174/46%);
-            padding: 10px; background-color:#e3edca;">
-    <h1 style="margin-left:42%;">Color Palette</h1>
-    {% for color in colors %}
-    <div style="width: 100px; margin-top: 2px; margin-bottom:0; margin-left:45%;">
-        <span><strong>{{ color }}:</strong></span>
+<div style="max-width: 50%; max-length: 50%; margin-left:17%;">
+    <img class="uploaded-image"
+         style="margin: 2px 0 20px 25%; max-width: 80%; max-length: 80%;"
+         src="static/images/upload/{{name}}">
+</div>
+{% for row in colors %}
+<div class="row justify-content-center">
+    {% for color in row %}
+
+    <div class="col-lg-4 d-flex justify-content-center mt-5 align-items-stretch">
+        <div class="card" style="width: 18rem;">
+            <div style="background-color:{{ color }}; height: 100px; width: 100px; margin-left: 32%; margin-top: 10%;"></div>
+            <div class="card-body">
+                <h5 class="card-title">Color's Hex Code: <span id="hex">{{color}}</span></h5>
+                <button class="btn btn-sm btn-primary" style="margin-left: 33%;" onclick="copyToClipboard('#hex')">Copy HEX</button>
+            </div>
+        </div>
     </div>
-    <div style="background-color:{{ color }}; height: 30px; width: 100px; margin-bottom:0; margin-left:45%;">
-    </div>
+
     {% endfor %}
 </div>
+{% endfor %}
 {% else %}
-<div style="height: 600px;"></div>
+<div style="height: 599px;"></div>
 {% endif %}
+
 </body>
 
 <footer style="
