--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Image Color Extraction</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="/static/assets/css/style.css" rel="stylesheet">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-    <script src="static/assets/js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body style="background-color: #faffed;">
-<div class="panel panel-default">
-    <div class="panel-heading"><strong><span style="margin-left:45%;">Upload an Image</span></strong></div>
-    <div class="panel-body" style="margin-left:38%;">
+<div class="panel panel-default" style="text-align:center;">
+    <div class="panel-heading"><h1><strong>Upload an Image</strong></h1></div>
+    <div class="panel-body">
 
         <!-- Standard Form -->
         <h4>Select the file you want to extract colors from</h4>
@@ -21,9 +23,9 @@
             <div class="form-inline">
                 <div class="form-group">
                     <input type="file" name="file" id="js-upload-files">
+                    <button type="submit" value=Upload class="btn btn-sm btn-primary" id="js-upload-submit">Upload Image</button>
                 </div>
-                <button type="submit" value=Upload class="btn btn-sm btn-primary" id="js-upload-submit">Upload Image
-                </button>
+
             </div>
         </form>
     </div>
@@ -36,16 +38,22 @@
          style="margin: 2px 0 20px 25%; max-width: 80%; max-length: 80%;"
          src="static/images/upload/{{name}}">
 </div>
+    <h3 style="margin-left: 37%;">Ordered By Most Used to Least</h3>
 {% for row in colors %}
 <div class="row justify-content-center">
     {% for color in row %}
 
     <div class="col-lg-4 d-flex justify-content-center mt-5 align-items-stretch">
         <div class="card" style="width: 18rem;">
-            <div style="background-color:{{ color }}; height: 100px; width: 100px; margin-left: 32%; margin-top: 10%;"></div>
-            <div class="card-body">
-                <h5 class="card-title">Color's Hex Code: <span id="hex">{{color}}</span></h5>
-                <button class="btn btn-sm btn-primary" style="margin-left: 33%;" onclick="copyToClipboard('#hex')">Copy HEX</button>
+            <div style="background-color:{{ color }}; height: 100px; width: 100px; margin-left: 32%;
+             margin-top: 10%; border-top: 1px solid #ddd;
+    box-shadow: 0 4px 20px 0 rgb(0 0 0/14%),0 7px 12px -5px rgb(144 164 174/46%);"></div>
+            <div style="text-align: center;" class="card-body">
+                <h5 class="card-title">{{hex_color_list_indices.index(color) + 1}}. Color's Hex Code: <span id="hex-{{hex_color_list_indices.index(color)}}">{{color}}</span>
+                </h5>
+                <button class="btn btn-sm btn-primary"
+                        onclick="copyToClipboard('#hex-{{hex_color_list_indices.index(color)}}')">Copy HEX
+                </button>
             </div>
         </div>
     </div>
@@ -54,22 +62,24 @@
 </div>
 {% endfor %}
 {% else %}
-<div style="height: 599px;"></div>
+<div style="height: 628px;"></div>
 {% endif %}
 
 </body>
 
 <footer style="
     border-top: 1px solid #ddd;
-    width: 100%;
     box-shadow: 0 4px 20px 0 rgb(0 0 0/14%),0 7px 12px -5px rgb(144 164 174/46%);
+    width: 100%;
     background-color: #ffe6a1;
     text-align: center;
     padding: 5px;
-    height: 7rem;
+    height: 5rem;
     margin-top: 20px">
     <span style="display:block; margin-top: 20px;">
         <strong>Nir G.©</strong> 2021 All Rights Reserved.
     </span>
 </footer>
+<script src="/static/assets/js/main.js"></script>
+
 </html>
