--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -27,6 +27,32 @@ h1, h2, h3 {
     margin-bottom: 10px;
 }
 
+input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  color: #000;
+  background-color: #ffc107;
+  border-color: #ffc107;
+}
 /* Image Section  */
 .image-section {
 
@@ -70,12 +96,14 @@ h1, h2, h3 {
     margin: 0 auto;
     margin-bottom: 15px;
     border-top: 1px solid #ddd;
+    border-radius: 0.50rem;
     box-shadow: 0 4px 20px 0 rgb(0 0 0/14%),0 7px 12px -5px rgb(144 164 174/46%);
 }
 
 .column-div-grad {
     background: rgb(218,247,247);
     background: linear-gradient(230deg, rgba(218,247,247,1) 0%, rgba(255,222,151,1) 100%);
+    border-radius: 0.50rem;
 }
 
 .color-description {
