--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,10 @@
         <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data" id="js-upload-form">
             <div class="form-inline">
                 <div class="form-group">
-                    <input type="file" name="file" id="js-upload-files" class="btn btn-secondary">
+                    <label class="custom-file-upload">
+                        <input type="file" name="file" id="js-upload-files">Select File
+                    </label><br>
+                    <span id="file-selected"></span><br>
                     <button type="submit" value=Upload class="btn btn-md btn-primary" id="js-upload-submit">Upload Image</button>
                 </div>
             </div>
